# newschatbot

./: .gitignore  ChatbotIZS - DB model.xlsx - Answers.csv  ChatbotIZS - DB model.xlsx - Articles.csv  ChatbotIZS - DB model.xlsx - Questions.csv  Dockerfile  LICENSE  README.md  csv_to_dict.py  docker-compose.yml  package-lock.json  package.json  requirements.txt  serverless.yml  setup.cfg
.github/workflows/: black.yml  serverless-app-deploy.yml  terraform_apply.yml  tests.yml
app/: articles_download.py  config.py  controller.py  flaskdb.py  main.py  model.py  models.py  service.py
dockers/postgres/: docker-compose.yml
dockers/serverless/: Dockerfile
infrastructure/aws/: database.tf  shared.tf  variables.tf
migrations/versions/: 03aea7e3b890_.py  3a2f5c3db80f_.py  c5cdef6f922f_.py  c76e9d46ee22_.py
tests/: conftest.py  docker-compose.yml  test_app.py
tests/data/: db_data.sql  schema.sql
