[metadata]
name = app
version = 1.0.0
url = https://github.com/cesko-digital/newschatbot

[options]
packages = find:
include_package_data = true
install_requires =
    feedparser==6.0.2
    Flask==1.0.2
    Flask-Migrate==2.5.2
    Flask-SQLAlchemy==2.5.1
    flask-paginate==0.8.1

[options.extras_require]
tests =
    psycopg2-binary==2.9.1
    pytest==6.2.4
    pytest-docker==0.10.3
    tenacity==8.0.1

[tool:pytest]
testpaths = tests
